examples/test/testpolicy15464.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15464
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key12: value8
      key44: value23
      key24: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value10
          key3: value40
      podSelector:
        matchLabels:
          key7: value24
          key1: value2
